--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -82,4 +82,12 @@
         <item name="colorControlActivated">@android:color/white</item>
     </style>
 
+    <style name="Custom.EditText.Dialog" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="android:textColorHint">@android:color/black</item>
+        <!--<item name="android:textSize">20sp</item>-->
+        <!--<item name="colorAccent">@color/light_blue_900</item>-->
+        <item name="colorControlNormal">@android:color/black</item>
+        <item name="colorControlActivated">@android:color/black</item>
+    </style>
+
 </resources>
