--- a/app/src/main/res/layout/fragment_customer_bookings.xml
+++ b/app/src/main/res/layout/fragment_customer_bookings.xml
@@ -11,13 +11,16 @@
 
        <LinearLayout
            android:layout_width="match_parent"
-           android:layout_height="wrap_content"
+           android:layout_height="match_parent"
            android:orientation="vertical">
 
            <TextView
                android:id="@+id/tvMessage"
-               android:layout_width="match_parent"
+               android:layout_width="wrap_content"
                android:layout_height="wrap_content"
+               android:layout_gravity="center"
+               android:gravity="center"
+               android:padding="10dp"
                android:textAppearance="@style/Custom.Headings.Bold"
                android:textSize="22sp" />
 
