--- a/app/src/main/res/layout/fragment_customer_emergency.xml
+++ b/app/src/main/res/layout/fragment_customer_emergency.xml
@@ -15,8 +15,11 @@
 
             <TextView
                 android:id="@+id/tvMessage"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:padding="10dp"
                 android:textAppearance="@style/Custom.Headings.Bold"
                 android:textSize="22sp" />
 
